[package]
name = "reqwest-ui"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "macos-private-api",
  "shell-open",
  "window-start-dragging",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-vibrancy = "0.4.2"
reqwest = { version = "0.11.22", features = [
  "rustls-tls",
  "gzip",
  "brotli",
  "deflate",
] }
typeshare = "1.0.1"
ts-rs = "7.0.0"
specta = { version = "=2.0.0-rc.5", features = ["typescript"] }
tauri-specta = { version = "=2.0.0-rc.2", features = ["typescript"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
